--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <img src="./src/plus.svg" alt="">
         </div>
         <div class="manifesto hide">
-            Welcome to FUGITIVE INTERNET.
-We don't reject the network. We refuse its terms.This is not about perfect escape. There is no such thing. This is about tactical disappearance. Not through complexity but through inversion. We cache our words in the gap and going off the grid will reveal itself. Disconnect . the become invisible and read in the dark.
+            You have entered the Fugitive Internet Space.
+We do not reject the network. We refuse its terms. This is not about perfect escape as there is no such thing. This is about tactical disappearance. We cache our words in the gap and going off the grid will reveal itself. Disconnect to become invisible and read in the dark.
         </div>
         <div class="png-container">
             <div class="network-speed">
